--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="js/d3.js"></script>
     <script src="js/d3.bin.js"></script>
-    <script src="js/heatmap.js"></script>
-    <script src="js/foo.js"></script>
+    <script src="js/marioheatmap.js"></script>
 </head>
 <body>
     <h1>Compare Mario Level Generators</h1>
