--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>Mario Level Generators</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="js/d3.js"></script>
-    <script src="js/d3.bin.js"></script>
 </head>
 <body>
     <h1>Compare Mario Level Generators</h1>
@@ -16,6 +14,9 @@
     <span>
         <div id="chart2"></div>
     </span>
+    <script src="js/d3.js"></script>
+    <script src="js/d3.bin.js"></script>
+    <script src="js/d3.tip.js"></script>
     <script src="js/marioheatmaps.js"></script>
 </body>
 </html>
